# diplom_for_check

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  package-lock.json  pyproject.toml  requirements.txt
src/: alembic.ini  server.py  test.py
src/apps/users/: auth.py  models.py  routers.py  routers_na_vszkiy.txt  schema.py
src/core/: config.py  email_service.py  exceptions.py  log.py  main.py  router.py
src/database/: __init__.py  manager.py
src/middlewares/: __init__.py  access_log_middleware.py  security.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 2025.02.24_06-36-17_f9926303d830.py  2025.03.05_12-01-23_5ac50dcb9f4a.py  2025.03.05_13-27-37_eabd8d7407df.py  2025.03.05_13-40-00_f7ff4d5b7b48.py  2025.03.05_13-40-13_e6a840f2510f.py  2025.03.05_14-09-12_baae015c9631.py  2025.03.06_08-45-52_5a6f7b854006.py  2025.03.06_09-39-58_40b043a6cb94.py  2025.04.04_00-12-43_05285ed603d5.py  2025.04.04_00-16-46_15b6c1a8c4c3.py  2025.04.04_00-42-13_1a3921867d9b.py  2025.04.08_16-57-10_dec3ff6708c0.py  2025.05.03_00-27-52_7ca2054f4d4c.py
